--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="unforgettable"
+      content="A web application designed to help you relive your most memorable moments from a collection of your photographs"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
