--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     <link href="https://fonts.googleapis.com/css?family=Walter+Turncoat&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Coming+Soon&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     <title>Unforgettable</title>
   </head>
   <body>
